--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <img src="./IMG/Minha-Foto-2.jpg" alt="Foto de Perfil" class="foto-perfil">
         <h1>João Carlos B.</h1>
-        <p>Desenvolvedor FullStack</p>
+        <p class="cabecalho-sub-titulo">Desenvolvedor FullStack</p>
 
     </main>
 
@@ -42,15 +42,21 @@
         <div class="projetos-caixa">
             <div class="projetos-card">
                 <img src="./IMG/Car-Page.jpg" alt="Projeto 1" class="projetos-img">
-                <h3 class="info-projetos">Loja de Carros</h3>
-                <p class="paragrafo-projetos">Uma loja virtual moderna com algumas animações suaves e com design
-                    responsivo.</p>
+                <div>
+                    <h3 class="info-projetos">Loja de Carros</h3>
+                    <p class="paragrafo-projetos">Uma loja virtual moderna com algumas animações suaves e com design
+                        responsivo.
+                    </p>
+                </div>
             </div>
             <div class="projetos-card">
                 <img src="./IMG/Gamer-Page.jpg" alt="Projeto 1" class="projetos-img">
-                <h3 class="info-projetos">Página de Jogos</h3>
-                <p class="paragrafo-projetos">Uma página de jogos que contem informações e detalhes dos mais novos
-                    jogos.</p>
+                <div>
+                    <h3 class="info-projetos">Página de Jogos</h3>
+                    <p class="paragrafo-projetos">Uma página de jogos que contem informações e detalhes dos mais novos
+                        jogos.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
