--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="projetos-caixa">
             <div class="projetos-card">
                 <img src="./IMG/Car-Page.jpg" alt="Projeto 1" class="projetos-img">
-                <div>
+                <div class="caixa-textos-projeto">
                     <h3 class="info-projetos">Loja de Carros</h3>
                     <p class="paragrafo-projetos">Uma loja virtual moderna com algumas animações suaves e com design
                         responsivo.
@@ -51,7 +51,7 @@
             </div>
             <div class="projetos-card">
                 <img src="./IMG/Gamer-Page.jpg" alt="Projeto 1" class="projetos-img">
-                <div>
+                <div class="caixa-textos-projeto">
                     <h3 class="info-projetos">Página de Jogos</h3>
                     <p class="paragrafo-projetos">Uma página de jogos que contem informações e detalhes dos mais novos
                         jogos.
@@ -62,15 +62,15 @@
     </section>
 
     <section id="contato" class="contatos">
-        <h2 class="contatos-titulo">Contatos</h2>
+        <h2 class="contatos-titulo">Entre em Contato</h2>
         <form class="formulario-contato" id="formulario">
-            <div class="nome-form">
+            <div class="grupo-form">
                 <input placeholder="Nome" class="campo-form">
             </div>
             <div class="grupo-form">
-                <textarea class="text-form" placeholder="Digite sua Mensagem"></textarea>
+                <textarea class="campo-form" placeholder="Digite sua Mensagem"></textarea>
             </div>
-
+            <button type="submit" class="botao-form">Enviar Whatsapp</button>
         </form>
     </section>
 </body>
