--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         responsivo.
                     </p>
                 </div>
+                <button class="botao-projeto" onclick="window.open('https://carpage-jc.netlify.app/', '_blank')">Ver Projeto</button>
             </div>
             <div class="projetos-card">
                 <img src="./IMG/Gamer-Page.jpg" alt="Projeto 1" class="projetos-img">
@@ -58,6 +59,17 @@
                         jogos.
                     </p>
                 </div>
+                <button class="botao-projeto" onclick="window.open('https://gamesclub-jotac.netlify.app/', '_blank')">Ver Projeto</button>
+            </div>
+            <div class="projetos-card">
+                <img src="./IMG/virtual store.jpg" alt="Projeto 1" class="projetos-img">
+                <div class="caixa-textos-projeto">
+                    <h3 class="info-projetos">Virtual Store</h3>
+                    <p class="paragrafo-projetos">Uma página de venda de produtos virtuais, com design
+                        responsivo e animações suaves.
+                    </p>
+                </div>
+                <button class="botao-projeto" onclick="window.open('https://virtualstore-jc.netlify.app/', '_blank')">Ver Projeto</button>
             </div>
         </div>
     </section>
