--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Orbitron:wght@400..900&display=swap"
+        rel="stylesheet">F
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Jota.C | Portfólio</title>
@@ -36,6 +41,13 @@
                 emprego como desenvolvedor junior. Tenho experiência e muita vontade de aprender.
             </p>
         </div>
+        <h2 class="conhecimento-titulo">Conhecimentos</h2>
+        <div class="conhecimento-caixa">
+            <p class="conhecimento-paragrafo">
+                JavaScript | HTML | CSS | React | Node.js | Express.js | MongoDB | MySQL | Git | GitHub | OutSystems
+            </p>
+        </div>
+
     </section>
 
     <section id="projetos" class="projetos">
@@ -49,7 +61,8 @@
                         responsivo.
                     </p>
                 </div>
-                <button class="botao-projeto" onclick="window.open('https://carpage-jc.netlify.app/', '_blank')">Ver Projeto</button>
+                <button class="botao-projeto" onclick="window.open('https://carpage-jc.netlify.app/', '_blank')">Ver
+                    Projeto</button>
             </div>
             <div class="projetos-card">
                 <img src="./IMG/Gamer-Page.jpg" alt="Projeto 1" class="projetos-img">
@@ -59,7 +72,8 @@
                         jogos.
                     </p>
                 </div>
-                <button class="botao-projeto" onclick="window.open('https://gamesclub-jotac.netlify.app/', '_blank')">Ver Projeto</button>
+                <button class="botao-projeto"
+                    onclick="window.open('https://gamesclub-jotac.netlify.app/', '_blank')">Ver Projeto</button>
             </div>
             <div class="projetos-card">
                 <img src="./IMG/virtual store.jpg" alt="Projeto 1" class="projetos-img">
@@ -69,8 +83,10 @@
                         responsivo e animações suaves.
                     </p>
                 </div>
-                <button class="botao-projeto" onclick="window.open('https://virtualstore-jc.netlify.app/', '_blank')">Ver Projeto</button>
+                <button class="botao-projeto"
+                    onclick="window.open('https://virtualstore-jc.netlify.app/', '_blank')">Ver Projeto</button>
             </div>
+            
         </div>
     </section>
 
