--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 emprego como desenvolvedor junior. Tenho experiência e muita vontade de aprender.
             </p>
         </div>
-        <h2 class="conhecimento-titulo">Conhecimentos</h2>
+        <h2 class="conhecimento-titulo">Ponto Forte</h2>
         <div class="conhecimento-caixa">
             <p class="conhecimento-paragrafo">
                 JavaScript | HTML | CSS | React | Node.js | Express.js | MongoDB | MySQL | Git | GitHub | OutSystems
